✅ test(collector): reduce assert count and use getFirst() in short-sale factual-zero test
Fix PMD violations (UnitTestContainsTooManyAsserts, UseGetFirst) found
by ./gradlew check in the ETN/COMMODITY factual-zero characterization
test added in 60030a4.

SPEC: SPEC-COLLECTOR-ASSETSCOPE-001